# PhotoNext_LibSmartScan

./: CMakeLists.txt  README.md  smartscan_config.txt
src/: data_queue.c  msg_queue.c  smartscan_utils.c  socket.c
